assets/css/style.css
/* Universal css rules applied to all three pages */
body {
    margin: 0;
    background-image: url('../images/grey_wash_wall.png');
}

p {
    line-height: 1.5;
    color: #777777;
}

header {
    background: #ffffff;
    border-bottom: 1px solid #cccccc;
}

.header-wrap {
    width: 960px;
    margin: auto;
    display: table;
}

#header-name {
    width: fit-content;
    padding: 20px;
    background: #4aaaa5;
    display: table-cell;
    float: left;
}

.nav-wrap {
    vertical-align: middle;
    display: table-cell;
	text-align: right;
	font-family: 'Open Sans', sans-serif;
}

.nav-item {
    display: inline-block;
    padding: 0 20px;
    color: #777777;
}

.nav-item a {
    text-decoration: none;
    color: #777777;
}

.sliver-divider {
    border-right: 1px solid #BDC0C1;
}

.content-wrap {
    width: 960px;
    padding: 20px;
    min-height: 300px;
    background: #ffffff;
    border: 1px solid #cccccc;
	margin: 50px auto 150px auto;
    box-sizing: border-box;
    font-family: 'Open Sans Condensed', sans-serif;
}

h1 {
    color: #ffffff;
    margin: 0;
	font-family: 'Open Sans', sans-serif;
}

h2 {
    color: #4aaaa5;
    font-family: 'Open Sans Condensed', sans-serif;
}

/* Footer is anchors to the bottom of the page with (position: fixed; & bottom: 0;) 
just like asked in directions */
footer {
    background: #666666;
    text-align: center;
	width: 100%;
	position: fixed;
    bottom: 0;
    border-top: 7px solid #4aaaa5;
    color: #cccccc;
}

/* Using this line-height to center the social media icons in the footer */
.social-wrapper {
	line-height: 2.7;
}

.social-wrapper a {
	font-size: 24px;
	color: inherit;
	/* this works in safari */
	text-decoration: none;
	/* this works in chrome */
	text-decoration-line: none;
	padding: 0 10px;
}


/* Styles related only to the index.html file */
.personal-photo {
    width: 140px;
    height: 150px;
	margin: 10px;
    /* float: left; */
}


/* Styles related only to the contact.html file */
label {
    color: #777777;
    padding: 10px 0;
    display: block;
}

input {
    padding: 5px;
    border: 1px solid #BFBFBF;
    margin: 5px 0;
    min-width: 905px;
}

textarea {
    min-width: 905px;
    min-height: 150px;
    border: 1px solid #dddddd;
}

button {
    padding: 9px 22px;
    background-color: #4aaaa5;
    color: #ffffff;
    font-size: 16px;
	margin-top: 20px;
	font-family: 'Open Sans Condensed', sans-serif;
}


/* Styles related only to the gallery.html file */
.flex-container {
    display: flex;
}

.flex-item {
    width: 250px;
    height: 250px;
    border: 1px solid #cccccc;
    display: inline-flex;
    flex-grow: 1;
    margin: 20px;
}

/* This link in included several times to ensure a new random
image is served from picsum. I could have used the same class for
all of these, but then the same image would be served and the page
doesn't look as good that way. */
.album1 {
    background-image: url('https://picsum.photos/300/351/?random');
}

.album2 {
    background-image: url('https://picsum.photos/350/350/?random');
}

.album3 {
    background-image: url('https://picsum.photos/349/350/?random');
}

.album4 {
    background-image: url('https://picsum.photos/351/350/?random');
}

.album5 {
    background-image: url('https://picsum.photos/350/349/?random');
}

/* Media queries to make the pages behave more responsively  */

@media (max-width: 980px) {

}

@media (max-width: 768px) {

}

@media (max-width: 640px) {
	header {
		position: static;
		border-bottom: none;
	}

	.header-wrap {
		width: 100%;
	}

	#header-name {
		width: 100%;
		text-align: center;
		padding: 20px 0;
	}

	.nav-wrap {
		display: inline-block;
		text-align: center;
		width: 100%;
		background-color: white;
		padding: 20px 0;
		border-bottom: 1px solid #cccccc;
	}

	.content-wrap {
		width: 90%;
	}

	.personal-photo {
		width: 280px;
		height: 300px;
		margin: 20px auto;
		display: block;
	}

	.flex-item {
		display: block;
		margin: 20px auto;
	}
}

